added JS and new photo. Editing of index.

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
             for the rest of the tested.</p>
         <p> Only the tested shall know the test.</p>
         <p><a href="https://en.wikipedia.org/wiki/Test_(greyhound_competition)">Click here</a> to find more information about the Test and the Tested.</p>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
