added change user button, added personal name interaction

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             for the rest of the tested.</p>
         <p> Only the tested shall know the test.</p>
         <p><a href="https://en.wikipedia.org/wiki/Test_(greyhound_competition)">Click here</a> to find more information about the Test and the Tested.</p>
+        <button>Change User</button>
         <script src="scripts/main.js"></script>
     </body>
 </html>
